Don't start chapters on a new page

--- a/src/env_book.tex
+++ b/src/env_book.tex
@@ -17,6 +17,9 @@
 % Don't show section numbers
 \setupheads[number=no]
 
+% Don't start chapters on a new page
+\setuphead[chapter][page=no]
+
 % Space between paragraphs
 \setupwhitespace[halfline]
 
