Add the Wheel of Emotion graphic

--- a/src/env_book.tex
+++ b/src/env_book.tex
@@ -26,4 +26,7 @@
 % Don't add extra whitespace in itemized lists
 \setupitemize[packed]
 
+% Image path configuration
+\setupexternalfigures[directory=.,location=local]
+
 \stopenvironment
