--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -34,7 +34,12 @@ We follow these principles when creating NPCs.
 
 \chapter{The Wheel of Emotions}
 
-Source: https://commons.wikimedia.org/wiki/File:Plutchik-wheel.svg
+% "none" means suppress the title
+\placefigure
+    [here,none]
+    [fig:plutchik]
+    {Plutchik's wheel of emotion}
+    {\externalfigure[plutchik][type=png]}
 
 Robert Plutchik published a "wheel of emotions". We will use this wheel, in the form of a table, to pick core emotions for our NPCs.
 When it's time to choose an emotion, roll a d8 and read down, then roll another d8 and read right. If you roll the same or a similar result, roll again.
@@ -138,5 +143,9 @@ As NPCs take part in the story, they can grow and change too. Here are suggestio
 \item Resolve a conflict with the PCs' aid
 \item Change the NPC's anchoring emotion or reason for being (e.g. by shifting from an opponent to a love interest)
 \stopitemize
+
+\chapter{Acknowledgements}
+
+Plutchik's Wheel of Emotion was taken from https://commons.wikimedia.org/wiki/File:Plutchik-wheel.svg
 
 \stoptext
