Change text flow

--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -7,11 +7,14 @@
 
 \title{Familiar Faces}
 
+{\tfxx
+
 CC-BY 4.0 by Astral Frontier
 
 Source: https://docs.google.com/document/d/1c-Ae1Bg9Wf6tNUD2I4q1h0XSa2EUNJSmr1VHwPWaScc/edit?usp=sharing
+}
 
-\chapter{What is this?}
+\startcolumns[TwoColumn]
 
 This is a system-agnostic supplement for any tabletop roleplaying game. It's a tool to create interesting non-protagonist characters (NPCs).
 It will help create plot hooks, personalities, and other details.
@@ -20,9 +23,9 @@ A non-protagonist character is any character without a dedicated player.
 Game masters, dungeon masters, and other facilitators are players. Their NPCs won't be the focus of the game.
 But those NPCs should still be engaging for everyone to interact with.
 
-\chapter{Principles}
+\column
 
-We follow these principles when creating NPCs.
+{\bf Principles}
 
 \startitemize
 \item The audience cares about a character because of what they need and what they're doing about it
@@ -31,6 +34,10 @@ We follow these principles when creating NPCs.
 \item NPC conflicts and drives should relate to PC stories and goals
 \item NPCs should appear when their story elements are in the spotlight, and recede when they aren't
 \stopitemize
+
+\stopcolumns
+
+\page
 
 \chapter{The Wheel of Emotions}
 
@@ -41,12 +48,16 @@ We follow these principles when creating NPCs.
     {Plutchik's wheel of emotion}
     {\externalfigure[plutchik][type=png]}
 
+\page
+
 Robert Plutchik published a "wheel of emotions". We will use this wheel, in the form of a table, to pick core emotions for our NPCs.
 When it's time to choose an emotion, roll a d8 and read down, then roll another d8 and read right. If you roll the same or a similar result, roll again.
 
 TODO table goes here
 
 \chapter{Anchor the NPC}
+
+\startcolumns[TwoColumn]
 
 Every NPC starts with a reason for being - why are you, the reader, creating this character?
 
@@ -61,6 +72,8 @@ Examples:
 \item You need a representative for a social class, a group, or a belief
 \stopitemize
 
+\column
+
 Next, choose an emotion from the table above.
 
 Finally, relate that emotion back to their reason for being. An easy method is to write a sentence like:
@@ -74,29 +87,46 @@ The resulting sentence is the NPC's {\bf anchor}. The NPC's actions and reaction
 
 That said, NPCs can change over time. They can fulfill many roles, or wear many hats. The anchor is their starting point, but not their limit.
 
+\stopcolumns
+
 \section{Examples}
 
 We will create three NPCs, all related to the conflict between nobles and commoners in a fantasy city.
 
-We roll and get Serenity. We anchor this character by saying they feel Serenity because of the system of nobility as a whole. They are content with their privileged position. We will call them the Noble.
+We roll and get Serenity. We anchor this character by saying they feel Serenity because of the system of nobility as a whole.
+They are content with their privileged position. We will call them the Noble.
 
-Next, we get Rage. We choose to say they are in power because of that Rage. We can say they work to sustain the aristocratic system by any means. We call them the Schemer.
+Next, we get Rage. We choose to say they are in power because of that Rage.
+We can say they work to sustain the aristocratic system by any means. We call them the Schemer.
 
-Finally, we get Loathing. We choose to say they feel Loathing because of the system. They hate the aristocrats' opulent and wasteful lifestyles. We call them the Demagogue.
+Finally, we get Loathing. We choose to say they feel Loathing because of the system.
+They hate the aristocrats' opulent and wasteful lifestyles. We call them the Demagogue.
 
 \chapter{Create Conflicts}
 
 NPCs can have two types of conflicts: internal and external.
 
-PCs can use persuasion, blackmail, or direct action to influence a conflicted NPC. Conflicts can cause NPCs to betray or aid PCs in turn. Conflicts can also be how others feel about an NPC. For example, a conflict might represent an NPC's reputation.
+PCs can use persuasion, blackmail, or direct action to influence a conflicted NPC.
+Conflicts can cause NPCs to betray or aid PCs in turn.
+Conflicts can also be how others feel about an NPC.
+For example, a conflict might represent an NPC's reputation.
 
-There is no "right" number of conflicts to give a character. The more they have, the more complex they will be as characters. If a character doesn't have immediate story importance, you can get away with no conflicts. Minor characters might have one conflict. Major characters can have two or three.
+There is no "right" number of conflicts to give a character.
+The more they have, the more complex they will be as characters.
+If a character doesn't have immediate story importance, you can get away with no conflicts.
+Minor characters might have one conflict.
+Major characters can have two or three.
+
+\startcolumns[TwoColumn]
 
 \section{Internal Conflicts}
 
 To create an internal conflict, choose an emotion from the table above.
 
-Then, name the source or object of that emotion. You can choose this in many ways. The easiest way is to pick one or more PCs, and look at their backstories, goals, or affiliations. You can also pick an issue that's active in the campaign. Relate the emotion to this thing, the way you created an anchor.
+Then, name the source or object of that emotion.
+The easiest way is to pick one or more PCs, and look at their backstories, goals, or affiliations.
+You can also pick an issue that's active in the campaign.
+Relate the emotion to this thing, the way you created an anchor.
 
 \section{External Conflicts}
 
@@ -104,25 +134,47 @@ To create an external conflict, choose an emotion from the table above.
 
 Next, pick another character (PC or NPC), or a group as a whole.
 
-Then, name a shared sphere of influence or interest. Finally, name a point of contention within that sphere.
+Then, name a shared sphere of influence or interest.
+
+Finally, name a point of contention within that sphere.
+
+\stopcolumns
 
 \section{Examples}
 
-For the Noble, we create an external conflict. We center it on the poor in the city. We say the point of contention is around who deserves wealth. The Noble feels Disapproval toward those who haven't achieved what they have. They see it as weakness or failure.
+For the Noble, we create an external conflict.
+We center it on the poor in the city.
+We say the point of contention is around who deserves wealth.
+The Noble feels Disapproval toward those who haven't achieved what they have.
+They see it as weakness or failure.
 
-We create an internal conflict for the Schemer. The emotion is Grief. We decide that's connected to the underclass. They emerged from the poverty of the slums and never want to go back.
+We create an internal conflict for the Schemer.
+The emotion is Grief.
+We decide that's connected to the underclass.
+They emerged from the poverty of the slums and never want to go back.
 
-We create two conflicts for the Demagogue. The first is internal Vigilance. They want to be careful not to let disagreements fracture their movement's unity. The second is external Remorse, connected to the Schemer. We decide the two were family, either married or related by blood, and they've grown apart.
+We create two conflicts for the Demagogue.
+The first is internal Vigilance.
+They want to be careful not to let disagreements fracture their movement's unity.
+The second is external Remorse, connected to the Schemer.
+We decide the two were family, either married or related by blood, and they've grown apart.
 
 \chapter{Interview the NPC}
 
-Journalists ask questions: who, what, when, where, how and why. Once you establish your character's anchoring emotion and conflicts, ask these questions. Then, ask questions about your answers.
+Journalists ask questions: who, what, when, where, how and why.
+Once you establish your character's anchoring emotion and conflicts, ask these questions.
+Then, ask questions about your answers.
 
-When answering questions, look to the players and PCs for ideas. Players will feel more invested in NPCs with ties to their own stories.
+When answering questions, look to the players and PCs for ideas.
+Players will feel more invested in NPCs with ties to their own stories.
 
-Try to answer at least two questions. The more you answer, the more detailed the NPC will be. Five questions will give you an NPC with a high level of detail.
+Try to answer at least two questions.
+The more you answer, the more detailed the NPC will be.
+Five questions will give you an NPC with a high level of detail.
 
-If the creation process for an NPC doesn't yield an interesting result, start over or revise something you don't like. Starting with a random choice is intended to get you going. If your instinct tells you to change something, change it.
+If the creation process for an NPC doesn't yield an interesting result, start over or revise something you don't like.
+Starting with a random choice is intended to get you going.
+If your instinct tells you to change something, change it.
 
 \section{Examples}
 
@@ -143,6 +195,8 @@ As NPCs take part in the story, they can grow and change too. Here are suggestio
 \item Resolve a conflict with the PCs' aid
 \item Change the NPC's anchoring emotion or reason for being (e.g. by shifting from an opponent to a love interest)
 \stopitemize
+
+\page
 
 \chapter{Acknowledgements}
 
