--- a/src/env_book.tex
+++ b/src/env_book.tex
@@ -10,18 +10,26 @@
 % Page size is US-Letter
 \setuppapersize[letter,portrait]
 
-% Page numbers are at the bottom
+% Define some text styles
+\definealternativestyle[FacesTitle][\bf\ss\tfd]
+
+% Hide page numbers, show the book name in the header
 \setuppagenumbering[]
 \setupheadertexts[Familiar Faces]
 
 % Don't show section numbers
 \setupheads[number=no]
 
-% Don't start chapters on a new page
+\setuphead[title][style=FacesTitle,align=middle]
+
+% Don't start chapters on a new page by default
 \setuphead[chapter][page=no]
 
 % Space between paragraphs
 \setupwhitespace[halfline]
+
+% Some sections will be multi-column
+\setupcolumns[TwoColumn]
 
 % Don't add extra whitespace in itemized lists
 \setupitemize[packed]
