Use sections instead of chapters

--- a/src/env_book.tex
+++ b/src/env_book.tex
@@ -20,10 +20,9 @@
 % Don't show section numbers
 \setupheads[number=no]
 
+% Set up header styles
 \setuphead[title][style=FacesTitle,align=middle]
-
-% Don't start chapters on a new page by default
-\setuphead[chapter][page=no]
+\setuphead[section][align=middle]
 
 % Space between paragraphs
 \setupwhitespace[halfline]
