--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -2,19 +2,16 @@
 
 \starttext
 
-% Add PDF bookmarks to all sections
-\placebookmarks[all]
-
 \title{Familiar Faces}
 
-{\tfxx
-
-CC-BY 4.0 by Astral Frontier
-
-Source: https://docs.google.com/document/d/1c-Ae1Bg9Wf6tNUD2I4q1h0XSa2EUNJSmr1VHwPWaScc/edit?usp=sharing
-}
+% TODO: turn this into a defined style
+\startalignment[middle]
+{\tfxx CC-BY 4.0 by Astral Frontier}
+\stopalignment
 
 \startcolumns[TwoColumn]
+
+\section{What Is This?}
 
 This is a system-agnostic supplement for any tabletop roleplaying game. It's a tool to create interesting non-protagonist characters (NPCs).
 It will help create plot hooks, personalities, and other details.
@@ -25,9 +22,9 @@ But those NPCs should still be engaging for everyone to interact with.
 
 \column
 
-{\bf Principles}
+\section{Principles}
 
-\startitemize
+\startitemize[4]
 \item The audience cares about a character because of what they need and what they're doing about it
 \item Small, engaging details create a spark of humanity
 \item It's better to start with the wrong answer than an empty page - we can always rewrite what we have
@@ -37,9 +34,17 @@ But those NPCs should still be engaging for everyone to interact with.
 
 \stopcolumns
 
+\section{The Process}
+
+\startitemize[n]
+\item Anchor the NPC by choosing a reason for being and a core emotion
+\item Create internal and external conflicts for the NPC
+\item Interview the NPC
+\stopitemize
+
 \page
 
-\chapter{The Wheel of Emotions}
+\section{The Wheel of Emotions}
 
 % "none" means suppress the title
 \placefigure
@@ -55,7 +60,7 @@ When it's time to choose an emotion, roll a d8 and read down, then roll another 
 
 TODO table goes here
 
-\chapter{Anchor the NPC}
+\section{Anchor the NPC}
 
 \startcolumns[TwoColumn]
 
@@ -63,7 +68,7 @@ Every NPC starts with a reason for being - why are you, the reader, creating thi
 
 Examples:
 
-\startitemize
+\startitemize[4]
 \item You need an antagonist, or an obstacle, or a love interest
 \item You need a king, or a town guard, or a sage
 \item You need a typical resident of a specific location, such as a school or marketplace
@@ -78,7 +83,7 @@ Next, choose an emotion from the table above.
 
 Finally, relate that emotion back to their reason for being. An easy method is to write a sentence like:
 
-\startitemize
+\startitemize[4]
 \item This NPC is (reason for being) because they're (emotion)
 \item This NPC is (emotion) because they're (reason for being)
 \stopitemize
@@ -89,7 +94,7 @@ That said, NPCs can change over time. They can fulfill many roles, or wear many 
 
 \stopcolumns
 
-\section{Examples}
+\subsection{Examples}
 
 We will create three NPCs, all related to the conflict between nobles and commoners in a fantasy city.
 
@@ -102,7 +107,7 @@ We can say they work to sustain the aristocratic system by any means. We call th
 Finally, we get Loathing. We choose to say they feel Loathing because of the system.
 They hate the aristocrats' opulent and wasteful lifestyles. We call them the Demagogue.
 
-\chapter{Create Conflicts}
+\section{Create Conflicts}
 
 NPCs can have two types of conflicts: internal and external.
 
@@ -119,7 +124,7 @@ Major characters can have two or three.
 
 \startcolumns[TwoColumn]
 
-\section{Internal Conflicts}
+\subsection{Internal Conflicts}
 
 To create an internal conflict, choose an emotion from the table above.
 
@@ -128,7 +133,7 @@ The easiest way is to pick one or more PCs, and look at their backstories, goals
 You can also pick an issue that's active in the campaign.
 Relate the emotion to this thing, the way you created an anchor.
 
-\section{External Conflicts}
+\subsection{External Conflicts}
 
 To create an external conflict, choose an emotion from the table above.
 
@@ -140,7 +145,7 @@ Finally, name a point of contention within that sphere.
 
 \stopcolumns
 
-\section{Examples}
+\subsection{Examples}
 
 For the Noble, we create an external conflict.
 We center it on the poor in the city.
@@ -159,7 +164,7 @@ They want to be careful not to let disagreements fracture their movement's unity
 The second is external Remorse, connected to the Schemer.
 We decide the two were family, either married or related by blood, and they've grown apart.
 
-\chapter{Interview the NPC}
+\section{Interview the NPC}
 
 Journalists ask questions: who, what, when, where, how and why.
 Once you establish your character's anchoring emotion and conflicts, ask these questions.
@@ -176,21 +181,21 @@ If the creation process for an NPC doesn't yield an interesting result, start ov
 Starting with a random choice is intended to get you going.
 If your instinct tells you to change something, change it.
 
-\section{Examples}
+\subsection{Examples}
 
 We can ask questions like these:
 
-\startitemize
+\startitemize[4]
 \item How did the Noble gain their wealth? Was it through crime, business, or inheritance? Who helped them? Why?
 \item What did the Schemer do to escape their station? Who else was affected? When did it happen?
 \item Is the Demagogue doing as much good as they think, or hope? Who else has ideas about how to change things in the city?
 \stopitemize
 
-\chapter{Develop NPCs}
+\section{Develop NPCs}
 
 As NPCs take part in the story, they can grow and change too. Here are suggestions on how to handle that development.
 
-\startitemize
+\startitemize[4]
 \item Add a new conflict
 \item Resolve a conflict with the PCs' aid
 \item Change the NPC's anchoring emotion or reason for being (e.g. by shifting from an opponent to a love interest)
@@ -198,7 +203,7 @@ As NPCs take part in the story, they can grow and change too. Here are suggestio
 
 \page
 
-\chapter{Acknowledgements}
+\section{Acknowledgements}
 
 Plutchik's Wheel of Emotion was taken from https://commons.wikimedia.org/wiki/File:Plutchik-wheel.svg
 
