Use a custom font for the title

--- a/src/env_book.tex
+++ b/src/env_book.tex
@@ -10,8 +10,8 @@
 % Page size is US-Letter
 \setuppapersize[letter,portrait]
 
-% Define some text styles
-\definealternativestyle[FacesTitle][\bf\ss\tfd]
+% Font definitions
+\definefont[FacesTitle][file:Abrakadaboom-KVEED*default at 48pt]
 
 % Hide page numbers, show the book name in the header
 \setuppagenumbering[]
