--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -4,10 +4,7 @@
 
 \title{Familiar Faces}
 
-% TODO: turn this into a defined style
-\startalignment[middle]
-{\tfxx CC-BY 4.0 by Astral Frontier}
-\stopalignment
+\subtitle{\goto{CC-BY 4.0}[url(https://creativecommons.org/licenses/by/4.0/)] by \goto{Astral Frontier}[url(https://astralfrontier.itch.io)]}
 
 \startcolumns[TwoColumn]
 
@@ -34,13 +31,7 @@ But those NPCs should still be engaging for everyone to interact with.
 
 \stopcolumns
 
-\section{The Process}
-
-\startitemize[n]
-\item Anchor the NPC by choosing a reason for being and a core emotion
-\item Create internal and external conflicts for the NPC
-\item Interview the NPC
-\stopitemize
+\input table
 
 \page
 
@@ -53,18 +44,16 @@ But those NPCs should still be engaging for everyone to interact with.
     {Plutchik's wheel of emotion}
     {\externalfigure[plutchik][type=png]}
 
-\page
-
 Robert Plutchik published a "wheel of emotions". We will use this wheel, in the form of a table, to pick core emotions for our NPCs.
-When it's time to choose an emotion, roll a d8 and read down, then roll another d8 and read right. If you roll the same or a similar result, roll again.
 
-TODO table goes here
+\page
 
 \section{Anchor the NPC}
 
 \startcolumns[TwoColumn]
 
-Every NPC starts with a reason for being - why are you, the reader, creating this character?
+Why did you feel the need to create this character? What role will they play in your story?
+This is an NPC's {\gameterm reason for being}.
 
 Examples:
 
@@ -80,6 +69,7 @@ Examples:
 \column
 
 Next, choose an emotion from the table above.
+Roll a d8 and read down, then roll another d8 and read right.
 
 Finally, relate that emotion back to their reason for being. An easy method is to write a sentence like:
 
@@ -88,7 +78,7 @@ Finally, relate that emotion back to their reason for being. An easy method is t
 \item This NPC is (emotion) because they're (reason for being)
 \stopitemize
 
-The resulting sentence is the NPC's {\bf anchor}. The NPC's actions and reactions should tie back to this anchor somehow.
+The resulting sentence is the NPC's {\gameterm anchor}. The NPC's actions and reactions should tie back to this anchor somehow.
 
 That said, NPCs can change over time. They can fulfill many roles, or wear many hats. The anchor is their starting point, but not their limit.
 
@@ -106,6 +96,8 @@ We can say they work to sustain the aristocratic system by any means. We call th
 
 Finally, we get Loathing. We choose to say they feel Loathing because of the system.
 They hate the aristocrats' opulent and wasteful lifestyles. We call them the Demagogue.
+
+\page
 
 \section{Create Conflicts}
 
@@ -141,7 +133,7 @@ Next, pick another character (PC or NPC), or a group as a whole.
 
 Then, name a shared sphere of influence or interest.
 
-Finally, name a point of contention within that sphere.
+Finally, name a point of contention within that shared sphere.
 
 \stopcolumns
 
@@ -205,6 +197,10 @@ As NPCs take part in the story, they can grow and change too. Here are suggestio
 
 \section{Acknowledgements}
 
-Plutchik's Wheel of Emotion was taken from https://commons.wikimedia.org/wiki/File:Plutchik-wheel.svg
+Plutchik's Wheel of Emotion was taken from \goto{File:Plutchik-wheel.svg}[url(https://commons.wikimedia.org/wiki/File:Plutchik-wheel.svg)]
+
+TODO: font uses
+
+TODO: playtest credits
 
 \stoptext
