--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -10,12 +10,19 @@
 
 \section{What Is This?}
 
-This is a system-agnostic supplement for any tabletop roleplaying game. It's a tool to create interesting non-protagonist characters (NPCs).
-It will help create plot hooks, personalities, and other details.
+This is a tool to create interesting supporting characters for games or other stories.
+It focuses on emotion, motivation, and conflicts.
 
-A non-protagonist character is any character without a dedicated player.
-Game masters, dungeon masters, and other facilitators are players. Their NPCs won't be the focus of the game.
-But those NPCs should still be engaging for everyone to interact with.
+There are three steps:
+
+\startitemize[n,packed]
+\item Anchor the Character
+\item Create conflicts
+\item Interview the Character
+\stopitemize
+
+Whenever you are asked to "roll for an emotion", you'll roll 2d8 and consult the table below.
+Read down for the value of the first d8, then across for the second.
 
 \column
 
@@ -25,8 +32,7 @@ But those NPCs should still be engaging for everyone to interact with.
 \item The audience cares about a character because of what they need and what they're doing about it
 \item Small, engaging details create a spark of humanity
 \item It's better to start with the wrong answer than an empty page - we can always rewrite what we have
-\item NPC conflicts and drives should relate to PC stories and goals
-\item NPCs should appear when their story elements are in the spotlight, and recede when they aren't
+\item Supporting characters' conflicts and drives should relate to the protagonists' stories
 \stopitemize
 
 \stopcolumns
@@ -44,27 +50,35 @@ But those NPCs should still be engaging for everyone to interact with.
     {Plutchik's wheel of emotion}
     {\externalfigure[plutchik][type=png]}
 
-Robert Plutchik published a "wheel of emotions". We will use this wheel, in the form of a table, to pick core emotions for our NPCs.
+\startalignment[middle]
+
+Robert Plutchik's Wheel of Emotions
+
+\stopalignment
 
 \page
 
-\section{Anchor the NPC}
+\section{Anchor the Character}
 
 \startcolumns[TwoColumn]
 
 Why did you feel the need to create this character? What role will they play in your story?
-This is an NPC's {\gameterm reason for being}.
+This is an character's {\gameterm reason for being}.
 
 Examples:
 
+\startSmallNarrower[right]
+
 \startitemize[4]
-\item You need an antagonist, or an obstacle, or a love interest
-\item You need a king, or a town guard, or a sage
-\item You need a typical resident of a specific location, such as a school or marketplace
-\item You need to give information to the PCs, or lie to them
-\item You want an NPC who is funny, or serious, or alien
-\item You need a representative for a social class, a group, or a belief
+\item an antagonist, obstacle, or lover
+\item a citizen: king, town guard, or sage
+\item a typical resident of a specific location, such as a teacher for a school or a merchant for a marketplace
+\item a character with a particular nature: funny, serious, alien, etc.
+\item a representative for a social class, a group, or a belief
+\item a source of information, expertise, or resources needed to solve a problem
 \stopitemize
+
+\stopSmallNarrower
 
 \column
 
@@ -74,45 +88,26 @@ Roll a d8 and read down, then roll another d8 and read right.
 Finally, relate that emotion back to their reason for being. An easy method is to write a sentence like:
 
 \startitemize[4]
-\item This NPC is (reason for being) because they're (emotion)
-\item This NPC is (emotion) because they're (reason for being)
+\item This character is (reason for being) because they feel (emotion)
+\item This character feels (emotion) because they're (reason for being)
 \stopitemize
 
-The resulting sentence is the NPC's {\gameterm anchor}. The NPC's actions and reactions should tie back to this anchor somehow.
-
-That said, NPCs can change over time. They can fulfill many roles, or wear many hats. The anchor is their starting point, but not their limit.
+The resulting sentence is the character's {\gameterm anchor}. The character's actions and reactions should be driven by this anchor.
 
 \stopcolumns
 
-\subsection{Examples}
-
-We will create three NPCs, all related to the conflict between nobles and commoners in a fantasy city.
-
-We roll and get Serenity. We anchor this character by saying they feel Serenity because of the system of nobility as a whole.
-They are content with their privileged position. We will call them the Noble.
-
-Next, we get Rage. We choose to say they are in power because of that Rage.
-We can say they work to sustain the aristocratic system by any means. We call them the Schemer.
-
-Finally, we get Loathing. We choose to say they feel Loathing because of the system.
-They hate the aristocrats' opulent and wasteful lifestyles. We call them the Demagogue.
-
-\page
-
 \section{Create Conflicts}
 
-NPCs can have two types of conflicts: internal and external.
+Conflicts are the heart of what makes a character interesting:
+they want something, it's hard for them to get it, and
+what they try to do about that is what makes a story.
 
-PCs can use persuasion, blackmail, or direct action to influence a conflicted NPC.
-Conflicts can cause NPCs to betray or aid PCs in turn.
-Conflicts can also be how others feel about an NPC.
-For example, a conflict might represent an NPC's reputation.
-
-There is no "right" number of conflicts to give a character.
-The more they have, the more complex they will be as characters.
+How many conflicts should you assign to a character?
 If a character doesn't have immediate story importance, you can get away with no conflicts.
 Minor characters might have one conflict.
 Major characters can have two or three.
+
+Characters can have two types of conflicts: internal and external.
 
 \startcolumns[TwoColumn]
 
@@ -128,70 +123,53 @@ Relate the emotion to this thing, the way you created an anchor.
 \subsection{External Conflicts}
 
 To create an external conflict, choose an emotion from the table above.
-
-Next, pick another character (PC or NPC), or a group as a whole.
-
-Then, name a shared sphere of influence or interest.
-
-Finally, name a point of contention within that shared sphere.
+Next, pick another character or a group as a whole.
+Then, name a shared responsibility, interest, or other activity.
+Finally, anchor the conflict by explaining how that shared element
+sparks the chosen emotion in the character.
 
 \stopcolumns
 
-\subsection{Examples}
-
-For the Noble, we create an external conflict.
-We center it on the poor in the city.
-We say the point of contention is around who deserves wealth.
-The Noble feels Disapproval toward those who haven't achieved what they have.
-They see it as weakness or failure.
-
-We create an internal conflict for the Schemer.
-The emotion is Grief.
-We decide that's connected to the underclass.
-They emerged from the poverty of the slums and never want to go back.
-
-We create two conflicts for the Demagogue.
-The first is internal Vigilance.
-They want to be careful not to let disagreements fracture their movement's unity.
-The second is external Remorse, connected to the Schemer.
-We decide the two were family, either married or related by blood, and they've grown apart.
-
-\section{Interview the NPC}
+\section{Interview the Character}
 
 Journalists ask questions: who, what, when, where, how and why.
-Once you establish your character's anchoring emotion and conflicts, ask these questions.
-Then, ask questions about your answers.
-
-When answering questions, look to the players and PCs for ideas.
-Players will feel more invested in NPCs with ties to their own stories.
+Once you establish your character's anchor and conflicts,
+pose these questions to your character.
+Follow up on the answers with fresh, exploratory questions.
 
 Try to answer at least two questions.
-The more you answer, the more detailed the NPC will be.
-Five questions will give you an NPC with a high level of detail.
+The more you answer, the more detailed the character will be.
+Five questions will give you a character with a high level of detail.
 
-If the creation process for an NPC doesn't yield an interesting result, start over or revise something you don't like.
-Starting with a random choice is intended to get you going.
-If your instinct tells you to change something, change it.
+Every player in a game should be given an opportunity to answer
+interview questions for a supporting character they'll interact with.
 
-\subsection{Examples}
+\subsection{Example Interview Questions}
 
-We can ask questions like these:
+Some of these questions mention "the issue". This is a shorthand for whatever story issues are important at the moment.
+For example, if an enemy army is invading, "the issue" means "the invasion".
 
-\startitemize[4]
-\item How did the Noble gain their wealth? Was it through crime, business, or inheritance? Who helped them? Why?
-\item What did the Schemer do to escape their station? Who else was affected? When did it happen?
-\item Is the Demagogue doing as much good as they think, or hope? Who else has ideas about how to change things in the city?
+\startFullPageNarrower[left,right]
+
+\startitemize[1]
+\item How did you arrive at your position (king, goatherd, etc.)?
+\item Who helped you get here?
+\item Who doesn't like you being here?
+\item Do you have any family, close friends, etc. in the area?
+\item Are things going well for you, or badly? If badly, what happened?
+\item Are you doing what you want to be doing? If not, what would you rather do?
+\item How is the issue affecting you?
+\item How have you responded to the issue?
+\item Who or what do you respect?
 \stopitemize
 
-\section{Develop NPCs}
+\stopFullPageNarrower
 
-As NPCs take part in the story, they can grow and change too. Here are suggestions on how to handle that development.
+\page
 
-\startitemize[4]
-\item Add a new conflict
-\item Resolve a conflict with the PCs' aid
-\item Change the NPC's anchoring emotion or reason for being (e.g. by shifting from an opponent to a love interest)
-\stopitemize
+\section{Example Characters}
+
+TODO
 
 \page
 
