Add sample characters

--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -137,6 +137,10 @@ Once you establish your character's anchor and conflicts,
 pose these questions to your character.
 Follow up on the answers with fresh, exploratory questions.
 
+The best interview questions will twist the knife by uncovering
+uncomfortable truths.
+Where possible, ask questions that would be hard for the character to answer honestly.
+
 Try to answer at least two questions.
 The more you answer, the more detailed the character will be.
 Five questions will give you a character with a high level of detail.
@@ -146,21 +150,24 @@ interview questions for a supporting character they'll interact with.
 
 \subsection{Example Interview Questions}
 
-Some of these questions mention "the issue". This is a shorthand for whatever story issues are important at the moment.
-For example, if an enemy army is invading, "the issue" means "the invasion".
-
 \startFullPageNarrower[left,right]
 
 \startitemize[1]
-\item How did you arrive at your position (king, goatherd, etc.)?
-\item Who helped you get here?
-\item Who doesn't like you being here?
-\item Do you have any family, close friends, etc. in the area?
-\item Are things going well for you, or badly? If badly, what happened?
+\item How did you arrive at your position (king, goatherd, etc.)? How far will you go to escape it?
+\item Who helped you get where you are (this place, in life)? How? What did it cost them?
 \item Are you doing what you want to be doing? If not, what would you rather do?
-\item How is the issue affecting you?
-\item How have you responded to the issue?
-\item Who or what do you respect?
+\item Are you moving toward something in your life, or away from something? What?
+\item Who or what do you respect? Why? Have they earned it?
+\item How are current events affecting you? How are you reacting to them?
+\item {\it For any conflict...}: how did this start? How will it end?
+\item {\it Admiration, Trust, ...}: have your feelings been betrayed or reinforced over time?
+\item {\it Terror, Fear, ...}: what helps you maintain self-control despite your fear?
+\item {\it Ecstacy, Joy, ...}: how do you spread your happiness to others? Who doesn't accept it?
+\item {\it Amazement, Surprise, ...}: what did you think was going to happen instead of this?
+\item {\it Grief, Sadness, ...}: who or what helps you through it?
+\item {\it Loathing, Disgust, ...}: who or what helps you find peace?
+\item {\it Rage, Anger, ...}: who or what helps you calm down?
+\item {\it Vigilance, Anticipation, ...}: what are the moments when you can relax?
 \stopitemize
 
 \stopFullPageNarrower
@@ -169,16 +176,124 @@ For example, if an enemy army is invading, "the issue" means "the invasion".
 
 \section{Example Characters}
 
-TODO
+We want to create characters for a city-based campaign,
+where our heroes will face both political maneuvering and back-alley brawls.
+All we know is that all three characters want to change the city somehow.
+
+\subsection{The Noble}
+
+Let's start with an upper-class character.
+To anchor our character, we roll for an emotion and get 3 and 7.
+This gives us {\bf Optimism}.
+They're optimistic because they have high social status.
+
+We'll give them two external conflicts.
+Rolling, we get 2 and 6: {\bf Apprehension}.
+Let's say this is targeted at another well-to-do person, who we'll call the Magnate.
+Their shared interest is the city's economy.
+Thus, the conflict is that the Magnate's recent economic activity worries the Noble.
+
+The second conflict is internal.
+We get a 4 and 8, {\bf Disapproval}.
+We'll say it's about the people of the city.
+The Noble thinks that the people aren't doing enough to help themselves.
+
+A logical interview question is:
+"if you think people aren't doing enough (Apprehension and Disapproval),
+why do you think things are going to be okay (Optimism)?"
+The Noble's answer comes from a place of privilege.
+They think that just because they're an aristocrat,
+that they can solve this with money and influence.
+Events shall see if that belief is validated.
+
+Next we can ask, "how are you trying to help?"
+Their answer is "giving money to what seem to be worthy causes".
+
+Taking the advice to twist the knife and uncover truths,
+let's also ask, "how do you know what are the worthy causes?"
+We'll say the Noble relies both on the advice of friends and their own intuition,
+but doesn't follow up personally on how well their money is spent.
+
+\subsection{The Demagogue}
+
+Let's descend the ladder and look for a rabble-rouser or influencer
+who occupies a lower or middle class.
+
+Our anchoring emotional roll is 7 and 8, giving us {\bf Aggression} - very suitable.
+It would be easy to say their feelings led to their position,
+but what if we reverse it?
+They are Aggressive because they are a Demagogue.
+
+They have an external conflict and an internal conflict.
+The emotion roll for the external conflict is 6 and 8, giving us {\bf Contempt}.
+An easy target for their contempt is the Noble we just created.
+Their shared interest is the city's well-being,
+and the Demagogue thinks the Noble's frivolous spending is hurting
+far more than it could help.
+
+For the internal conflict, we roll 3 and 3, getting {\bf Joy}.
+Let's have fun and make this indirectly about the Noble again.
+The Demagogue really liked the bits of the high life they experienced from time to time.
+The conflict is whether it's okay to like fancy parties and dinners
+when you're supposed to be fighting for the city.
+
+For the interview, let's start with the anchor.
+"Why are you aggressive because you're a demagogue"?
+The character became an advocate for a consortium of merchants,
+and only discovered how bad things really were after investigating the issues in that role.
+
+As a followup, we can ask "are you yourself a merchant?" Sure, makes sense, let's go with that.
+
+Finally, looking back at Aggression, we can ask, "what keeps you civil when you'd rather not be?"
+The answer is that the Demagogue has family - maybe a spouse, maybe children - who
+would lose their financial support if something escalated.
+Thus, the Demagogue wants to start something, feeling there's little alternative left,
+but is constrained by the need to stay out of trouble.
+
+\subsection{The Schemer}
+
+Finally, let's look at someone tied to the systems of power, but not part of them.
+This character will be a plotter and manipulator behind the scenes.
+
+Their anchoring emotion is {\bf Sadness}, with a roll of 5 and 3.
+We can say that they took up this life because of that sadness.
+
+They have an external conflict, based on {\bf Admiration}.
+We'll say that this is directed at a character we introduced in the Noble's creation: the Magnate.
+The shared interest is in personal wealth and power.
+So what's the issue? We'll say that the Schemer likes how the Magnate gets things done,
+but that their own plans need the Magnate to go down as well.
+
+They have an internal conflict. On a 6 and 1, this is based on {\bf Loathing}.
+We'll tie this to the overall issue of politics and wealth in the city.
+
+It feels like the Schemer isn't at peace with who and what they are.
+Why not? Let's ask: "why do you feel sadness and loathing? Why do these motivate you?"
+We'll say that they lost someone special to them, like a spouse or family member,
+because of the situation in the city.
+Perhaps medicine was too expensive, for example.
+
+"Why do you feel loathing about this situation?"
+The answer is because that lost special person would not want the Schemer
+to be doing what they're doing, and yet this seems to be the only way for
+it to never happen again.
+The Schemer has become a tragic figure to avert further tragedy, at least in their own eyes.
+
+Let's twist the knife.
+"Do you want to bring it all down, or do you want to become one of them?"
+The Schemer has no good answer for that, and this is probably the root
+of their external conflict with the Magnate.
 
 \page
 
 \section{Acknowledgements}
 
+This document was created via \goto{ConTeXt}[url(https://wiki.contextgarden.net/Main_Page)], licensed under the GNU GPL v2.
+
 Plutchik's Wheel of Emotion was taken from \goto{File:Plutchik-wheel.svg}[url(https://commons.wikimedia.org/wiki/File:Plutchik-wheel.svg)]
+and is in the public domain.
 
-TODO: font uses
-
-TODO: playtest credits
+The header font is Abrakadaboom, designed by \goto{Kurasan}[url(https://www.fontspace.com/abrakadaboom-font-f124405)].
+The body font is \goto{EB Garmond}[url(https://fonts.google.com/specimen/EB+Garamond/license)], under the SIL Open Font license, version 11.
 
 \stoptext
